feat(mixpanel): backend telemetry to mixpanel (#4121)
relates to #OPT-5760